--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ setenv =
 deps =
     https://www.djangoproject.com/download/1.6.2/tarball/#egg=django
     django-jenkins
+    django-nose
 
 [testenv:py27-1.6]
 commands =
