--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,32 @@
 [tox]
-envlist = py27-1.6
-downloadcache = {toxworkdir}/_download/
+envlist = py27-django{15,16,17}
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}
+    DJANGO_SETTINGS_MODULE=test_settings
 deps =
-    https://www.djangoproject.com/download/1.6.2/tarball/#egg=django
-    django-jenkins
-    django-nose
-
-[testenv:py27-1.6]
+    django15: Django==1.5.12
+    django16: Django==1.6.10
+    django17: Django==1.7.4
+    coverage==3.7.1
+    nose==1.3.4
+    django-nose==1.3
 commands =
     {envbindir}/python setup.py --quiet develop --always-unzip
-    {envbindir}/python {envbindir}/django-admin.py test {posargs} --settings=test_settings --noinput
+    {envbindir}/python {envbindir}/django-admin.py test {posargs} --noinput
+
+[testenv:docs]
+changedir = {toxinidir}/docs
+deps =
+    Django==1.7.4
+commands =
+    pip install --disable-pip-version-check --requirement ../requirements/documentation.txt
+    sphinx-build -b {posargs:html} . _build
+    validate_readme.py ../README.rst
+
+[testenv:flake8]
+deps =
+    Django==1.7.4
+    flake8==2.3.0
+commands =
+    flake8 --ignore=E501 {posargs:yet_another_django_profiler setup.py test_settings.py test_urls.py}
