--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     django16: Django==1.6.10
     django17: Django==1.7.4
     coverage==3.7.1
+    mock==1.0.1
     nose==1.3.4
     django-nose==1.3
 commands =
@@ -19,6 +20,7 @@ commands =
 changedir = {toxinidir}/docs
 deps =
     Django==1.7.4
+    mock==1.0.1
 commands =
     pip install --disable-pip-version-check --requirement ../requirements/documentation.txt
     sphinx-build -b {posargs:html} . _build
@@ -27,6 +29,10 @@ commands =
 [testenv:flake8]
 deps =
     Django==1.7.4
+    mccabe==0.3
+    pep8==1.6.1
+    pyflakes==0.8.1
     flake8==2.3.0
+    mock==1.0.1
 commands =
     flake8 --ignore=E501 {posargs:yet_another_django_profiler setup.py test_settings.py test_urls.py}
