Cleaner pytest and coverage parameters

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     pytest-xdist==1.11
 commands =
     python setup.py --quiet develop --always-unzip
-    py.test --cov yet_another_django_profiler {posargs:yet_another_django_profiler}
+    py.test {posargs}
 
 [testenv:docs]
 changedir = {toxinidir}/docs
