--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=test_settings
+addopts = --cov yet_another_django_profiler
+norecursedirs = .* docs requirements ve
