Allow to use Yappi instead of cProfile as a profiler backend.

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     mock==1.0.1
     nose==1.3.4
     django-nose==1.3
+    yappi==0.94
 commands =
     {envbindir}/python setup.py --quiet develop --always-unzip
     {envbindir}/python {envbindir}/django-admin.py test {posargs} --noinput
