Restore missing line after a merge.

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     pytest-django==2.8.0
     pytest-xdist==1.11
     yappi==0.94
+commands =
     python setup.py --quiet develop --always-unzip
     py.test {posargs}
 
