--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands =
 changedir = {toxinidir}/docs
 deps =
     Django==1.8
+    mock==1.0.1
 commands =
     pip install --disable-pip-version-check --requirement ../requirements/documentation.txt
     sphinx-build -b {posargs:html} . _build
